Make multi-level menus to avoid overflowing when more pages are added Move some stuff to frontmatter lists

--- a/2024/css/i3d.scss
+++ b/2024/css/i3d.scss
@@ -60,8 +60,10 @@ header {
         }
 
         #nav-list {
-            position: relative;
             list-style: none;
+
+            text-transform: uppercase;
+            font-weight: bold;
 
             @include smaller-than($large-screen-size) {
                 visibility: hidden;
@@ -81,9 +83,22 @@ header {
             }
 
             li {
+                a, a:hover, a:active, a:visited {
+                    color: black;
+                    text-decoration: none;
+                }
+
+                &.active {
+                    a, a:hover, a:active, a:visited {
+                        color: $link;
+                    }
+                }
+            }
+
+            & > li {
                 float: left;
                 margin: 0;
-                padding: 30px 5px;
+                padding: 30px 4px;
 
                 @include smaller-than($large-screen-size) {
                     float: none;
@@ -91,13 +106,13 @@ header {
                     padding: 0;
                 }
 
-                a, a:hover, a:active, a:visited {
-                    color: black;
-                    text-decoration: none;
-                    text-transform: uppercase;
-                    font-weight: bold;
+                & > a, & > span.submenu-title {
                     padding: 1em 0.625em;
                     margin: 0;
+
+                    @include smaller-than($max-page-width) {
+                        padding: 1em 0.25em;
+                    }
                     @include smaller-than($large-screen-size) {
                         padding: 0.5em 0 0.5em 80px;
                         width: 100%;
@@ -108,24 +123,126 @@ header {
                     }
                 }
 
+                & > span.submenu-title {
+                    @include smaller-than($large-screen-size) {
+                        padding: 0.5em 0 0 90px;
+                        font-size: 75%;
+                        color: $dark-gray;
+
+                        &::after {
+                            content: '';
+                            position: relative;
+                            left: 0.5em;
+                            border: solid $dark-gray;
+                            border-width: 1px 1px 0 0;
+                            display: inline-block;
+                            padding: 3px;
+                        }
+                    }
+                }
+
                 @include bigger-than($large-screen-size) {
                     &:first-child {
                         padding-left: 0;
-                        a, a:hover, a:active, a:visited {
+                        & > a {
                             padding-left: 0;
                         }
                     }
                     &:last-child {
                         padding-right: 0;
-                        a, a:hover, a:active, a:visited {
+                        & > a {
                             padding-right: 0;
                         }
                     }
                 }
 
-                &.active {
-                    a, a:hover, a:active, a:visited {
-                        color: $link;
+                &.submenu {
+                    position: relative;
+                    margin-right: 5px;
+
+                    & > span.submenu-title {
+                        cursor: default;
+                    }
+
+                    &::after {
+                        content: '';
+                        position: relative;
+                        left: -5px;
+                        top: -1.5px;
+                        border: solid black;
+                        border-width: 0 3px 3px 0;
+                        display: inline-block;
+                        padding: 3px;
+                        transform: rotate(-45deg);
+                        transition: .2s ease-in-out;
+
+                        @include smaller-than($large-screen-size) {
+                            display: none;
+                        }
+                    }
+
+                    &:hover::after {
+                        transform: rotate(45deg);
+                    }
+
+                    & > ul {
+                        display: none;
+
+                        list-style: none;
+
+                        position: absolute;
+                        top: $nav-height;
+                        //left: 0;
+                        right: 0;
+
+                        background-color: $bg-soft;
+
+                        box-sizing: border-box;
+                        //width: 100vw;
+                        //max-width: $max-page-width;
+                        min-width: 25em;
+                        padding: calc(#{$main-vertical-padding} - 1.5em) 0;
+
+                        @include smaller-than($large-screen-size) {
+                            display: block;
+                            position: relative;
+                            top: 0;
+                            padding: 0;
+                            background-color: white;
+                        }
+
+                        & > li {
+                            text-align: right;
+                            margin: 0;
+
+                            @include smaller-than($large-screen-size) {
+                                text-align: left;
+                            }
+
+                            a {
+                                display: block;
+                                box-sizing: border-box;
+                                padding: 0.75em $main-horizontal-padding;
+
+                                transition: .2s ease-in-out;
+                                background-color: transparent;
+
+                                &:hover {
+                                    background-color: $bg-soft-darker;
+                                }
+
+                                @include smaller-than($large-screen-size) {
+                                    padding: 0.5em 0 0.5em 110px;
+                                    max-width: 400px;
+                                    margin: 0 auto;
+                                }
+                            }
+                        }
+                    }
+
+                    &:hover > ul {
+                        display: block;
+                        z-index: 1;
                     }
                 }
             }
