--- a/_sass/2024/_base.scss
+++ b/_sass/2024/_base.scss
@@ -3,13 +3,10 @@ $max-page-width: 1440px;
 $medium-screen-size: 800px;
 $large-screen-size: 1080px;
 
-
-$highlight-color: rgb(255, 204, 0);
-$highlight-color-dark: rgb(255, 153, 0);
-
 $bg-blue: #0090DE;
 $bg-green: #0EAB39;
 $bg-soft: #E7F2F4;
+$bg-soft-darker: #bdd8e7;
 $blue: #0DA0FF;
 $dark-gray: #888888;
 
